# planlyze

./: .env  .env.example  .env.production.example  .gitignore  .replit  API_DOCUMENTATION.md  ARCHITECTURE_SUMMARY.md  BACKEND_ARCHITECTURE.md  CODE_STYLE_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  FLASK_SETUP.md  FRONTEND_ARCHITECTURE.md  README High notes.md  README.md  index.html  migrate.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  tailwind.config.js  vite.config.js  wsgi.py
attached_assets/: Pasted--errors-Database-error-This-Session-s-transaction-has-b_1767611842595.txt  Pasted--failed-1-failed-rows-email-All-rows-erro-1767611849715_1767611849715.txt  Pasted--id-693804a6760a05d6032a8b03-created-date-2025-12-09T11_1766151694406.txt  Pasted-Warning-Unknown-event-handler-property-onOpenChange-It-_1766508826618.txt  Pasted-chunk-SXRIVT2P-js-v-574d7551-21609-Download-the-React-D_1766509204399.txt
functions/: adjustUserCredits.ts  airtableSync  exportAllReports  exportReport  exportUsers  generateAnalysisReport  generateAnalysisReport.ts  getAnalysisByIdAdmin  getSharedReport.ts  listAllAnalysesAdmin  listAllUsersAdmin  listAnalysesByUser  processReferral.ts  runChainedAnalysis  runChainedAnalysis.ts  sendSmtpEmail  sendTemplatedEmail.ts  sendVerificationCode  verifyCode  verifyResetCode
migrations/versions/: 0445674735fc_add_description_and_min_purchase_fields_.py  (+11 more)
server/: README.md  app.py  config.py  exceptions.py  models.py  seed.py
src/: App.css  App.jsx  Layout.jsx  README.md  index.css  main.jsx  pages.config.js
(+177 files in other folders)
